--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
     box-sizing: border-box;
 }
 .container{
-  max-width: 1000px;
-  margin: auto;
+  margin: auto 300px;
 }
 .border{
     border: 1px solid black;
+}
+body h2{
+    margin-bottom: 30px;
+}
+.question{
+    margin: 60px auto 20px 0px;
 }
